--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="style.css">	
+		<title>Barbearia Alura</title>		
+		<link rel="stylesheet" href="style-home.css">
 	</head>
 
 	<body>
@@ -34,5 +34,11 @@
 
 			<img src="beneficios.jpg" class="imagembeneficios">
 		</div>
+
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+
+		</footer>
 	</body>
 </html>
