--- a/contato.html
+++ b/contato.html
@@ -22,8 +22,32 @@
 		</header>
 
 		<main>
-			teste
+			<form>
+				<label for="nomesobrenome">Nome e sobrenome</label>
+				<input type="text" id="nomesobrenome">
+				<label for="email">Email</label>
+				<input type="text" id="email">
+				<label for="telefone">Telefone</label>
+				<input type="text" id="telefone">
 
+				<label for="mensagem">Mensagem</label>
+				<textarea cols="30" rows="10" id="mensagem"></textarea>
+
+				<div>
+					<p>Como prefere o nosso contato?</p>
+					<label for="radio-email">Email</label>
+					<input type="radio" name="contato" value="email" id="radio-email">
+
+					<label for="radio-telefone">Telefone</label>
+					<input type="radio" name="contato" id="radio-telefone">
+
+					<label for="radio-whatsapp">Whatsapp</label>
+					<input type="radio" name="contato" id="radio-whatsapp">
+				</div>
+
+				<label><input type="checkbox">Gostaria de receber nossas novidades por email?</label>
+
+				<input type="submit" value="Enviar formulário">
 		</main>
 
 
